Facture paiments and echeances documentation added
