# app/Http/Resources/EcheanceResource.php
@@ -14,6 +14,15 @@ class EcheanceResource extends Resource
      */
     public function toArray($request)
     {
-        return parent::toArray($request);
+        return [
+            "id" => $this->id,
+            "sommePayee" => $this->sommePayee,
+            "sommeRestante" => $this->sommeRestante,
+            "dueDate" => $this->dueDate,
+            'document_id'=> $this->document_id,
+            'document_type' => $this->document_type,
+            'created_at'=> $this->created_at,
+            'updated_at'=> $this->updated_at,
+        ];
     }
 }
