# app/Http/Resources/PaiementResource.php
@@ -14,6 +14,21 @@ class PaiementResource extends Resource
      */
     public function toArray($request)
     {
-        return parent::toArray($request);
+        $addedBy_contactId = null;
+        $usr = \App\User::find($this->addedBy);
+        if($usr)
+        {
+            $addedBy_contactId = $usr->getContactId();
+        }
+        return
+        [
+            'id' => $this->id,
+            'sommePayee' => $this->sommePayee,
+            'addedBy'=> $addedBy_contactId,
+            'document_id'=> $this->document_id,
+            'document_type' => $this->document_type,
+            'created_at'=> $this->created_at,
+            'updated_at'=> $this->updated_at,
+        ];
     }
 }
